# wgpu-clocks

./: Cargo.toml  README.md
resources/digital/shaders/: filter.wgsl  forward.wgsl
resources/mcounter/shaders/: mcounter.wgsl
resources/polar/shaders/: disk.wgsl  ring.wgsl
resources/portal/meshes/: digit_geo.ply  moon_geo.ply  platform_geo.ply  portal_geo.ply  sun_geo.ply  terrain_geo.ply
resources/portal/shaders/: digits.wgsl  portal.wgsl  textured.wgsl
src/: lib.rs
supplementary/digital/: clock_layout.blend
