[package]
name = "wgpu-clocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "clockutils"
path = "src/lib.rs"

[dependencies]
wgpu = "0.18.0"
winit = { version = "0.29.0", features = ["rwh_05"]}
glam = "0.25.0"
raw-window-handle = "0.6.0"
pollster = "0.3.0"
image = "0.25.0"
chrono = "0.4.35"
ply-rs = "0.1.3"

[profile.release]
strip = true
opt-level = "z"

[features]
console = []